Dropped namespaces from raptor-templates

--- a/raptorjs-express-app/src/pages/index/template.rhtml
+++ b/raptorjs-express-app/src/pages/index/template.rhtml
@@ -1,11 +1,11 @@
-<optimizer:page name="index" package-path="./optimizer.json" />
+<optimizer-page name="index" package-path="./optimizer.json" />
 
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>index | raptorjs-express-app</title>
-    <optimizer:head/>
+    <optimizer-head/>
 </head>
 <body>
     <h1>
@@ -14,15 +14,15 @@
     
     <div class="section box">
         <div class="box-shadow">
-            <app:search-form/>
+            <app-search-form/>
         </div>
     </div>
 
-    <optimizer:body/>
+    <optimizer-body/>
 
-    <w:init-widgets/>
+    <w-init-widgets/>
 
-    <browser-refresh:refresh enabled="true"/>
+    <browser-refresh enabled="true"/>
 
 </body>
 </html>
