--- a/raptor-templates-express-app/index.rhtml
+++ b/raptor-templates-express-app/index.rhtml
@@ -25,41 +25,26 @@
     </div>
 
     <h2>Custom Tags</h2>
-    <ul>
-        <li>
-            <app-hello-template name="Frank"/>
-        </li>
-        <li>
-            <app-hello-renderer name="John"/>
-        </li>
-        <li>
-            <p>
-                <app-button label="Default"/>
-                <app-button label="Primary" variant="primary"/>
-                <app-button label="Success" variant="success"/>
-                <app-button label="Info" variant="info"/>
-                <app-button label="Warning" variant="warning"/>
-                <app-button label="Danger" variant="danger"/>
-                <app-button label="Link" variant="link"/>
-            </p>
-            <p>
-                <app-button label="Large button" variant="primary" size="lg"/>
-                <app-button label="Large button" size="lg"/>
-            </p>
-            <p>
-                <app-button label="Default button" variant="primary"/>
-                <app-button label="Default button"/>
-            </p>
-            <p>
-                <app-button label="Small button" variant="primary" size="sm"/>
-                <app-button label="Small button" size="small"/>
-            </p>
-            <p>
-                <app-button label="Small button" variant="primary" size="xs"/>
-                <app-button label="Small button" size="xs"/>
-            </p>
-        </li>
-    </ul>
+
+    <p>
+        <app-hello-template name="Frank"/>
+    </p>
+    <p>
+        <app-hello-renderer name="John"/>
+    </p>
+    <p>
+        <app-button label="Default"/>
+        <app-button label="Primary" variant="primary" size="lg"/>
+        <app-button label="Primary" variant="primary"/>
+        <app-button label="Primary" variant="primary" size="sm"/>
+        <app-button label="Primary" variant="primary" size="xs"/>
+        <app-button label="Success" variant="success"/>
+        <app-button label="Info" variant="info"/>
+        <app-button label="Warning" variant="warning"/>
+        <app-button label="Danger" variant="danger"/>
+        <app-button label="Link" variant="link"/>
+    </p>
+
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </body>
 </html>
