--- a/weather/src/components/app-current-conditions/template.rhtml
+++ b/weather/src/components/app-current-conditions/template.rhtml
@@ -37,7 +37,7 @@
         </tr>
         <tr c-if="data.precipitationType">
             <td>$data.precipitationType</td>
-            <td>$data.precipitationRate mm/hour</td>
+            <td>$data.precipitationRate</td>
         </tr>
     </tbody>
 </table>
