--- a/weather/src/global-style/global.css
+++ b/weather/src/global-style/global.css
@@ -14,8 +14,13 @@ h1 {
 header {
     background-color: #000;
     color: #fff;
-    padding: 1em;
     padding-left: 0.6em;
+}
+
+header h1 {
+    padding: 0px;
+    margin: 0px;
+    line-height: 2em;
 }
 
 
@@ -39,7 +44,7 @@ header {
     -webkit-box-shadow: 0px 0px 10px 10px rgba(0,0,0,.4);
     box-shadow:         0px 0px 10px 10px rgba(0,0,0,.4);
     background-color: #fff;
-    margin-top: 40px;
+    margin-top: 30px;
     padding: 2em;
 }
 
@@ -47,8 +52,8 @@ header {
     position: relative;
     padding: 0;
     font-size: 1em;
-    height: 42px;
-    line-height: 1.2em;
+    height: 38px;
+    line-height: 1.1em;
     background-color: rgba(0,0,0,.7);
     color: #fff;
 }
@@ -80,7 +85,7 @@ header {
     float: left;
     padding-left: 0.6em;
     padding-right: 0.6em;
-    line-height: 42px;
+    line-height: 38px;
     vertical-align: middle;
 }
 
@@ -97,4 +102,5 @@ header {
     bottom: 0px;
     padding-left: 1em;
     padding-right: 1em;
+    text-align: center;
 }
