--- a/weather/src/layouts/default-layout.rhtml
+++ b/weather/src/layouts/default-layout.rhtml
@@ -36,7 +36,7 @@
     </div>
 
     <footer id="footer">
-        Powered by RaptorJS  
+        Powered by <a href="https://github.com/raptorjs3/">RaptorJS</a> | Weather data from <a href="http://openweathermap.org/">OpenWeatherMap</a> | Background image by <a href="https://www.flickr.com/people/theaucitron/">theaucitron</a>
     </footer>
 
     <optimizer-body/>
