--- a/weather/src/components/app-location-weather/template.rhtml
+++ b/weather/src/components/app-location-weather/template.rhtml
@@ -1,5 +1,8 @@
 <h3 class="location">Weather for $data.location</h3>
-<div class="weather-panel">
+<div c-if="data.invalidLocation" class="alert alert-warning">
+    Invalid Location
+</div>
+<div class="weather-panel" c-else>
     <h4>Current Conditions</h4>
     <app-current-conditions weather-data="data.weatherData"/>
 </div>
