Initial commit of the Dust version of the sample weather app

--- a/weather/src/components/app-weather/template.rhtml
+++ b/weather/src/components/app-weather/template.rhtml
@@ -1,4 +1,4 @@
-<div w-bind="./widget" class="weather">
+<div w-bind="./widget" w-config="{hello: 'world'}" class="weather">
     <app-choose-location w-id="chooseLocation" />
     
     <progress w-el-id="loading" class="loading">Loading...</progress>
