--- a/weather/src/components/app-choose-location/template.rhtml
+++ b/weather/src/components/app-choose-location/template.rhtml
@@ -3,5 +3,5 @@
         <label class="sr-only" for="query">City or Zip</label>
         <input type="text" class="form-control" name="q" w-el-id="query" placeholder="Zip or City">
     </div>
-    <app-button type="submit" label="Go" id="go" variant="primary"/>
+    <sample-button type="submit" label="Go" id="go" variant="primary"/>
 </form>
