--- a/widgets-bind-behavior/src/pages/index/template.rhtml
+++ b/widgets-bind-behavior/src/pages/index/template.rhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="my-component" w-bind="./widget">
-        <h1>My Component</h1>
+        <h1>Click Me</h1>
     </div>
 
     <optimizer-body/>
